--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
     max-width: 800px;
     margin: 0 auto;
     padding: 0 8px;
-    background-color: pink;
+    background-color: green;
     color: #000000;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
@@ -48,7 +48,7 @@ nav a:active {
 h1,
 h2,
 h3 {
-    color: red;
+    color: black;
 }
 
 h1 {
